<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/textview1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.leaveme.ssad.MainActivity" 
    android:background="@color/back_green">

    <TextView
        android:id="@+id/fileArea"
        android:layout_width="wrap_content"
        android:layout_height="125dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="15dp"
        android:background="@drawable/border"
        android:text="@string/filearea"
        android:textSize="16sp" 
        />

	<ListView
	    android:id="@android:id/list"
	    android:layout_width="fill_parent"
	    android:layout_height="230dp"
	    android:layout_marginLeft="10dp"
	    android:layout_marginRight="10dp"
	    android:layout_below="@+id/fileArea"
	    android:layout_marginTop="5dp"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/button5" />

    <Button
        android:id="@+id/button1"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:layout_alignRight="@android:id/list"
        android:layout_alignTop="@+id/button6"
        android:background="@color/back2"
        android:text="@string/button1"
        android:textSize="15sp" />

    <ImageView
        android:id="@+id/button2"
        android:layout_width="50dp"
        android:layout_height="45dp"
        android:layout_alignLeft="@+id/button4"
        android:layout_alignTop="@+id/button5"
        android:contentDescription="@string/button2"
        android:onClick="startRecording"
        android:src="@drawable/record_button" />

    <Button
        android:id="@+id/button4"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_alignLeft="@android:id/list"
        android:layout_below="@android:id/list"
        android:layout_marginTop="10dp"
        android:background="@color/back2"
        android:text="@string/button4" />

    <Button
        android:id="@+id/button6"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="53dp"
        android:layout_height="40dp"
        android:layout_alignBaseline="@+id/button4"
        android:layout_alignBottom="@+id/button4"
        android:layout_marginLeft="14dp"
        android:layout_toRightOf="@+id/button4"
        android:background="@color/back2"
        android:text="@string/button6" />

    <ImageView
        android:id="@+id/button5"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/button1"
        android:layout_marginBottom="7dp"
        android:contentDescription="@string/button5"
        android:src="@drawable/play_button" />

</RelativeLayout>